<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e9eae5"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/column_eventName" />

            <TextView
                android:id="@+id/viewEventName"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e9eae5"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/column_eventDate" />

            <TextView
                android:id="@+id/viewEventDate"
                android:textSize="25sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:background="#e9eae5"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:text="@string/column_startTime" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:background="#e9eae5"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/colorAccent"
                    android:text="@string/column_endTime" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:background="#e9eae5"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/viewStartTime"
                    android:textSize="25sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1.5">

                <TextView
                    android:id="@+id/textPeriod"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/period"
                    android:textSize="25sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:background="#e9eae5"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/viewEndTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25sp" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e9eae5"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:text="@string/column_category" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <ImageView
                    android:id="@+id/imageView_category"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_margin="5dp" />

                <TextView
                    android:id="@+id/viewEventCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="25sp"
                    android:background="#e9eae5" />
            </LinearLayout>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e9eae5"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/column_memo" />

            <TextView
                android:id="@+id/viewMemo"
                android:textSize="25sp"
                android:background="#e9eae5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#e9eae5"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/column_address" />

            <TextView
                android:id="@+id/viewAddress"
                android:textSize="25sp"
                android:background="#e9eae5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>


        <rd.slcs.co.jp.showtabi.view.CardRecyclerView4EventPhotos
            android:id="@+id/CardRecyclerView4Photos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></rd.slcs.co.jp.showtabi.view.CardRecyclerView4EventPhotos>


    </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
    
</LinearLayout>