<resources>
    <string name="app_name">ShowTabi</string>

    <string name="period">～</string>

    <string name="alertDialog_title">削除確認</string>
    <string name="alertDialog_positiveButton">はい</string>
    <string name="alertDialog_negativeButton">いいえ</string>

    <string name="column_planName">プラン名</string>
    <string name="column_startDay">出発日</string>
    <string name="column_endDay">最終日</string>
    <string name="column_memo">メモ</string>
    <string name="column_person">人数</string>
    <string name="column_person_unit">人</string>
    <string name="column_eventName">イベント名</string>
    <string name="column_eventDate">日付</string>
    <string name="column_startTime">開始時間</string>
    <string name="column_endTime">終了時間</string>
    <string name="column_category">イベントカテゴリ</string>
    <string name="column_address">場所</string>

    <string name="column_required_planName">プラン名(必須)</string>
    <string name="column_required_startDay">出発日(必須)</string>
    <string name="column_required_endDay">最終日(必須)</string>

    <string name="column_required_eventName">イベント名(必須)</string>
    <string name="column_required_eventDate">日付(必須)</string>
    <string name="column_required_startTime">開始時間(必須)</string>
    <string name="column_required_endTime">終了時間(必須)</string>

    <string name="category_move">移動</string>
    <string name="category_sightseeing">観光</string>
    <string name="category_eat">食事</string>
    <string name="category_stay">宿泊</string>
    <string name="category_other">その他</string>

    <string name="menu_list_options_plan_list">プラン一覧のオプションメニュー</string>
    <string name="menu_list_options_event_list">イベント一覧のオプションメニュー</string>
    <string name="menu_list_options_event_add">イベント登録のオプションメニュー</string>
    <string name="menu_list_options_Save">保存</string>
    <string name="menu_list_options_Del">削除</string>
    <string name="menu_list_options_Edit">編集</string>

    <!-- 各ページのタイトル -->
    <string name="title_planList">プラン一覧</string>
    <string name="title_planAdd">プラン作成</string>
    <string name="title_planEdit">プランの編集画面</string>
    <string name="title_eventList">イベント一覧</string>
    <string name="title_eventAdd">イベントの新規作成</string>
    <string name="title_eventEdit">イベントの編集画面</string>
    <string name="title_eventReference">イベントの参照画面</string>

    <!-- エラーメッセージ -->
    <string name="msg_error_0001">必須項目を入力してください</string>
    <string name="msg_error_0002">日付形式で入力してください</string>
    <string name="msg_error_0003">出発日以降の日付を入力してください</string>
    <string name="msg_error_0004">最終日以前の日付を入力してください</string>

    <!-- ワーニングメッセージ -->
    <string name="msg_warning_0001">プランを削除します。よろしいですか？</string>
    <string name="msg_warning_0002">イベントを削除します。よろしいですか？</string>

    <string-array name="person_number_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
