<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuListOption_Event_Reference"
        app:showAsAction="always"
        android:title="@string/menu_list_options_Edit">
    </item>

</menu>